--- a/index.html
+++ b/index.html
@@ -191,9 +191,11 @@
       <h1>Quando il corpo si rilassa davvero,<br>spesso migliora anche il sonno.</h1>
 
       <p class="sub">
-        Trattamento <strong>Shiatsu</strong> per tensioni corporee, stress e sonno leggero.
-        Un lavoro manuale e graduale: si parte dal corpo e si osserva cosa cambia.
-      </p>
+  Se la tensione torna sempre (collo • spalle • schiena) e il sonno resta leggero,
+  spesso non è solo “rigidità”, ma un corpo che fatica a uscire dall’allerta.
+  Lo Shiatsu può aiutare a cambiare stato, in modo graduale.
+</p>
+
 
       <div class="ctaRow">
         <a class="btn btnPrimary"
@@ -207,11 +209,12 @@
         </a>
       </div>
 
-      <div class="ctaNote">
-        Scrivimi <strong>2 righe</strong>: cosa senti + da quanto.<br>
-        <strong>Ti rispondo io</strong> e capiamo se lo shiatsu è adatto nel tuo caso.
-        <div class="ctaPerm">Va bene anche se non sai bene cosa scrivere.</div>
-      </div>
+     <div class="ctaNote">
+  Scrivimi cosa senti <strong>e da quanto</strong> (anche in modo semplice).<br>
+  <strong>Ti rispondo entro 24 ore</strong> e ti dico se lo Shiatsu è adatto nel tuo caso e qual è il passo successivo.
+  <div class="ctaPerm">Puoi iniziare anche solo con: “mi sento sempre contratto/a”.</div>
+</div>
+
 
       <div class="micro">
         Rispondo personalmente • su appuntamento a Solarolo (RA)
@@ -230,6 +233,10 @@
     <div class="wrap twoCol">
       <div class="soft">
         <h2 class="secTitle" style="margin:0 0 10px">Se ti riconosci</h2>
+        <div class="small muted" style="margin:6px 0 10px">
+  Quando la tensione è presente da tempo, una singola seduta spesso dà sollievo,
+  ma per stabilizzare il cambiamento è utile un piccolo ciclo di <strong>3–5 incontri</strong>.
+</div>
         <ul class="bullets">
           <li class="li"><span class="tick">✓</span><span>Tensioni a collo/spalle/schiena che ritornano.</span></li>
           <li class="li"><span class="tick">✓</span><span>Mal di schiena ricorrente (lombare o dorsale) e rigidità.</span></li>
