--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Shiatsu | Tensioni + Sonno | Luca Centolani</title>
   <meta name="description" content="Trattamento Shiatsu per tensioni corporee, stress e sonno leggero. Approccio graduale e personalizzato. Solarolo (RA).">
 
-  <!-- Meta Pixel (stesso pixel) -->
   <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -20,7 +19,6 @@
 
     fbq('init', '220009700640058');
     fbq('track', 'PageView');
-    /* evento per distinguere la landing */
     fbq('trackCustom', 'View_Landing_Shiatsu');
   </script>
   <noscript>
@@ -33,7 +31,6 @@
 
 <div id="lc-shiatsu">
   <style>
-    /* base */
     #lc-shiatsu{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#0b1220}
     #lc-shiatsu{background:#F3EDE3;}
     #lc-shiatsu *{box-sizing:border-box}
@@ -43,7 +40,6 @@
     #lc-shiatsu .small{font-size:13px;line-height:1.45}
     #lc-shiatsu .hr{height:1px;background:rgba(11,18,32,.08);margin:14px 0}
 
-    /* palette più “shiatsu”: profonda, calda, meno “tech” */
     #lc-shiatsu .hero{
       position:relative; overflow:hidden; border-radius:22px;
       background:
@@ -94,6 +90,20 @@
     #lc-shiatsu .heroAlt a{
       text-decoration:underline;text-underline-offset:3px;color:rgba(255,255,255,.85);
     }
+
+    /* NUOVO: filtro elegante */
+    #lc-shiatsu .qualify{
+      margin-top:12px;
+      padding:10px 12px;
+      border-radius:14px;
+      background:rgba(255,255,255,.08);
+      border:1px solid rgba(255,255,255,.14);
+      color:rgba(255,255,255,.80);
+      font-size:13px;
+      line-height:1.45;
+      max-width:74ch;
+    }
+    #lc-shiatsu .qualify strong{color:rgba(255,255,255,.92)}
 
     #lc-shiatsu .section{padding:22px 0}
     #lc-shiatsu .secTitle{margin:0 0 10px;letter-spacing:-.35px;font-size:clamp(18px, 5.2vw, 26px)}
@@ -185,17 +195,20 @@
     }
   </style>
 
-  <!-- HERO -->
   <section class="hero">
     <div class="wrap">
       <h1>Quando il corpo si rilassa davvero,<br>spesso migliora anche il sonno.</h1>
 
       <p class="sub">
-  Se la tensione torna sempre (collo • spalle • schiena) e il sonno resta leggero,
-  spesso non è solo “rigidità”, ma un corpo che fatica a uscire dall’allerta.
-  Lo Shiatsu può aiutare a cambiare stato, in modo graduale.
-</p>
+        Trattamento <strong>Shiatsu</strong> per tensioni corporee, stress e sonno leggero.
+        Un lavoro manuale e graduale: si parte dal corpo e si osserva cosa cambia.
+      </p>
 
+      <!-- NUOVO: filtro -->
+      <div class="qualify">
+        È un lavoro orientato a cambiare <strong>stato</strong> (non “solo muscoli”).<br>
+        <strong>Non</strong> è un massaggio estetico né un intervento “veloce” per spegnere il sintomo.
+      </div>
 
       <div class="ctaRow">
         <a class="btn btnPrimary"
@@ -209,12 +222,11 @@
         </a>
       </div>
 
-     <div class="ctaNote">
-  Scrivimi cosa senti <strong>e da quanto</strong> (anche in modo semplice).<br>
-  <strong>Ti rispondo entro 24 ore</strong> e ti dico se lo Shiatsu è adatto nel tuo caso e qual è il passo successivo.
-  <div class="ctaPerm">Puoi iniziare anche solo con: “mi sento sempre contratto/a”.</div>
-</div>
-
+      <div class="ctaNote">
+        Scrivimi <strong>2 righe</strong>: cosa senti + da quanto.<br>
+        <strong>Ti rispondo io</strong> e capiamo se lo shiatsu è adatto nel tuo caso.
+        <div class="ctaPerm">Va bene anche se non sai bene cosa scrivere.</div>
+      </div>
 
       <div class="micro">
         Rispondo personalmente • su appuntamento a Solarolo (RA)
@@ -228,15 +240,10 @@
     </div>
   </section>
 
-  <!-- SE TI RICONOSCI + BENEFICI REALISTICI -->
   <section class="section">
     <div class="wrap twoCol">
       <div class="soft">
         <h2 class="secTitle" style="margin:0 0 10px">Se ti riconosci</h2>
-        <div class="small muted" style="margin:6px 0 10px">
-  Quando la tensione è presente da tempo, una singola seduta spesso dà sollievo,
-  ma per stabilizzare il cambiamento è utile un piccolo ciclo di <strong>3–5 incontri</strong>.
-</div>
         <ul class="bullets">
           <li class="li"><span class="tick">✓</span><span>Tensioni a collo/spalle/schiena che ritornano.</span></li>
           <li class="li"><span class="tick">✓</span><span>Mal di schiena ricorrente (lombare o dorsale) e rigidità.</span></li>
@@ -244,6 +251,8 @@
           <li class="li"><span class="tick">✓</span><span>Sonno leggero, risvegli, difficoltà a recuperare.</span></li>
           <li class="li"><span class="tick">✓</span><span>Rigidità e stanchezza fisica persistente.</span></li>
           <li class="li"><span class="tick">✓</span><span>Disturbi che migliorano per un po’ e poi tornano.</span></li>
+          <!-- NUOVO: selezione -->
+          <li class="li"><span class="tick">✓</span><span>Cerchi un lavoro sul <strong>sistema nervoso</strong>, non un massaggio “ogni tanto”.</span></li>
         </ul>
         <div class="small muted" style="margin-top:10px">
           Obiettivo: alleggerire tensioni e favorire un rilassamento più stabile nel tempo.
@@ -269,7 +278,6 @@
     </div>
   </section>
 
-  <!-- COS’È + IL TUO MODO DI LAVORARE -->
   <section class="section">
     <div class="wrap twoCol">
       <div class="soft">
@@ -301,7 +309,6 @@
           Successivamente gli intervalli possono essere gradualmente allungati in base alle esigenze della persona.
         </div>
 
-        <!-- LINK verso sito (aggiunta) -->
         <div class="small muted" style="margin-top:12px">
           Se vuoi approfondire il mio approccio complessivo:
           <a href="https://www.lucacentolani.net/come-lavoro" target="_blank" rel="noopener">Come lavoro</a>
@@ -311,7 +318,6 @@
     </div>
   </section>
 
-  <!-- RISULTATI REALISTICI (grid) -->
   <section class="section">
     <div class="wrap">
       <h2 class="secTitle">Cosa può cambiare (in modo realistico)</h2>
@@ -323,7 +329,6 @@
     </div>
   </section>
 
-  <!-- LINK prima delle testimonianze (aggiunta) -->
   <section class="section" style="padding-top:0">
     <div class="wrap">
       <div class="small muted">
@@ -333,7 +338,6 @@
     </div>
   </section>
 
-  <!-- TESTIMONIANZE (riuso) -->
   <section class="section">
     <div class="wrap twoCol2">
       <div class="quote">
@@ -347,7 +351,6 @@
     </div>
   </section>
 
-  <!-- FAQ (ridotte e specifiche) -->
   <section class="section" id="faq">
     <div class="wrap">
       <h2 class="secTitle">Domande frequenti</h2>
@@ -387,13 +390,17 @@
     </div>
   </section>
 
-  <!-- CTA BAND -->
   <section class="section" id="contatto">
     <div class="wrap">
       <div class="ctaBand">
         <h2 class="secTitle" style="margin:0 0 8px">Vuoi capire se fa per te?</h2>
         <div style="color:rgba(255,255,255,.82);line-height:1.5">
           Scrivimi <strong>2 righe</strong>: cosa senti + da quanto. <strong>Ti rispondo io</strong> e capiamo se lo shiatsu è adatto nel tuo caso.
+        </div>
+
+        <!-- NUOVO: frase selettiva -->
+        <div class="small" style="margin-top:10px;color:rgba(255,255,255,.72)">
+          Se serve continuità, di solito iniziamo con <strong>un piccolo ciclo</strong> (2–3 sedute) e poi rivalutiamo.
         </div>
 
         <div class="ctaRow" style="margin-top:12px">
@@ -412,7 +419,6 @@
     </div>
   </section>
 
-  <!-- FORM SOLO IN FONDO -->
   <section class="section" id="form-alt">
     <div class="wrap">
       <div class="soft">
@@ -457,6 +463,7 @@
     </div>
     <div class="stickyNote">
       Scrivimi <strong>2 righe</strong>: cosa senti + da quanto. <strong>Ti rispondo io</strong>.
+      <span style="display:block;margin-top:4px;color:rgba(255,255,255,.70)">Se serve, partiamo con 2–3 sedute e poi rivalutiamo.</span>
     </div>
   </div>
 
@@ -483,7 +490,6 @@
         fire("Contatti_Click_Shiatsu", { href: href });
       }
 
-      // (opzionale) track visite al sito / pagina shiatsu dal landing
       if (href === "https://www.lucacentolani.net" || href === "https://www.lucacentolani.net/") {
         fire("GoTo_Sito_From_Landing_Shiatsu", { href: href });
       }
@@ -499,4 +505,5 @@
 
 </body>
 </html>
+
 
