--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Shiatsu | Tensioni + Sonno | Luca Centolani</title>
-  <meta name="description" content="Trattamento Shiatsu per tensioni corporee, stress e sonno leggero. Approccio graduale e personalizzato. Solarolo (RA).">
+  <title>Shiatsu | Tensioni + Emozioni | Luca Centolani</title>
+  <meta name="description" content="Shiatsu per tensioni fisiche e stati emotivi che restano nel corpo. Un lavoro manuale e graduale per ritrovare spazio e respiro. Solarolo (RA).">
 
+  <!-- Meta Pixel -->
   <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -31,6 +32,7 @@
 
 <div id="lc-shiatsu">
   <style>
+    /* base */
     #lc-shiatsu{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#0b1220}
     #lc-shiatsu{background:#F3EDE3;}
     #lc-shiatsu *{box-sizing:border-box}
@@ -40,6 +42,7 @@
     #lc-shiatsu .small{font-size:13px;line-height:1.45}
     #lc-shiatsu .hr{height:1px;background:rgba(11,18,32,.08);margin:14px 0}
 
+    /* hero */
     #lc-shiatsu .hero{
       position:relative; overflow:hidden; border-radius:22px;
       background:
@@ -56,8 +59,9 @@
     #lc-shiatsu .sub{
       margin:0 0 14px; color:rgba(255,255,255,.86);
       font-size:clamp(14px, 4.2vw, 16.5px);
-      line-height:1.45; max-width:62ch;
+      line-height:1.45; max-width:66ch;
     }
+
     #lc-shiatsu .ctaRow{display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin-top:10px}
     #lc-shiatsu .btn{
       display:inline-flex;align-items:center;justify-content:center;gap:10px;
@@ -78,12 +82,17 @@
       color:rgba(255,255,255,.92);
       flex:1 1 160px;
     }
+
     #lc-shiatsu .micro{margin-top:10px;color:rgba(255,255,255,.74);font-size:13px;line-height:1.4}
+
+    /* CTA note (riscritta) */
     #lc-shiatsu .ctaNote{
-      margin-top:10px;color:rgba(255,255,255,.80);font-size:13px;line-height:1.45;max-width:66ch;
+      margin-top:10px;color:rgba(255,255,255,.82);
+      font-size:13px;line-height:1.45;max-width:68ch;
     }
     #lc-shiatsu .ctaNote strong{color:rgba(255,255,255,.92)}
     #lc-shiatsu .ctaPerm{margin-top:6px;color:rgba(255,255,255,.78);font-size:13px;line-height:1.4}
+
     #lc-shiatsu .heroAlt{
       margin-top:10px;font-size:13px;color:rgba(255,255,255,.70);
     }
@@ -91,23 +100,25 @@
       text-decoration:underline;text-underline-offset:3px;color:rgba(255,255,255,.85);
     }
 
-    /* NUOVO: filtro elegante */
+    /* box filtro (morbido, serio) */
     #lc-shiatsu .qualify{
       margin-top:12px;
-      padding:10px 12px;
+      padding:12px 12px;
       border-radius:14px;
       background:rgba(255,255,255,.08);
       border:1px solid rgba(255,255,255,.14);
-      color:rgba(255,255,255,.80);
+      color:rgba(255,255,255,.82);
       font-size:13px;
       line-height:1.45;
       max-width:74ch;
     }
     #lc-shiatsu .qualify strong{color:rgba(255,255,255,.92)}
 
+    /* sections */
     #lc-shiatsu .section{padding:22px 0}
     #lc-shiatsu .secTitle{margin:0 0 10px;letter-spacing:-.35px;font-size:clamp(18px, 5.2vw, 26px)}
     #lc-shiatsu .grid{display:grid;gap:12px;grid-template-columns:1fr;}
+
     #lc-shiatsu .card{
       border-radius:18px;padding:16px;background:#fff;
       border:1px solid rgba(11,18,32,.10);
@@ -165,7 +176,6 @@
     #lc-shiatsu .stickyInner{max-width:1060px;margin:0 auto;display:flex;gap:10px;flex-wrap:wrap}
     #lc-shiatsu .sticky .btn{border-radius:14px;padding:12px 14px;font-size:14px;min-height:46px}
     #lc-shiatsu .sticky .btnPrimary{flex:1 1 auto}
-
     #lc-shiatsu .stickyNote{
       max-width:1060px;margin:6px auto 0;
       padding:0 2px;
@@ -195,24 +205,24 @@
     }
   </style>
 
+  <!-- HERO -->
   <section class="hero">
     <div class="wrap">
-      <h1>Quando il corpo si rilassa davvero,<br>spesso migliora anche il sonno.</h1>
+      <h1>A volte, non è solo tensione muscolare.<br>È qualcosa che il corpo sta ancora trattenendo.</h1>
 
       <p class="sub">
-        Trattamento <strong>Shiatsu</strong> per tensioni corporee, stress e sonno leggero.
-        Un lavoro manuale e graduale: si parte dal corpo e si osserva cosa cambia.
+        Shiatsu per tensioni fisiche e stati emotivi che restano bloccati nel corpo.<br>
+        Un lavoro manuale e graduale, per aiutarti a ritrovare spazio, calma e respiro.
       </p>
 
-      <!-- NUOVO: filtro -->
       <div class="qualify">
-        È un lavoro orientato a cambiare <strong>stato</strong> (non “solo muscoli”).<br>
-        <strong>Non</strong> è un massaggio estetico né un intervento “veloce” per spegnere il sintomo.
+       È uno spazio in cui il corpo può rallentare davvero<br>
+       e lasciare andare quello che trattiene da tempo.
       </div>
 
       <div class="ctaRow">
         <a class="btn btnPrimary"
-           href="https://wa.me/393478221395?text=Ciao%20Luca%2C%20ti%20scrivo%20per%20uno%20Shiatsu.%0ACosa%20sento%3A%20%5Btensione%2Fdolore%2Fstress%2Fsonno%5D.%0ADa%20quanto%3A%20%5B...%5D.%0ADove%20lo%20sento%20nel%20corpo%3A%20%5Bcollo%2Fspalle%2Fschiena%2Faltro%5D."
+           href="https://wa.me/393478221395?text=Ciao%20Luca%2C%20mi%20riconosco%20in%20questa%20sensazione%3A%20mi%20sento%20spesso%20in%20tensione.%0ACosa%20sento%20nel%20corpo%3A%20%5Bcollo%2Fspalle%2Fschiena%2Faltro%5D.%0ADa%20quanto%3A%20%5B...%5D."
            target="_blank" rel="noopener noreferrer">
           WhatsApp • Scrivimi
         </a>
@@ -223,8 +233,9 @@
       </div>
 
       <div class="ctaNote">
-        Scrivimi <strong>2 righe</strong>: cosa senti + da quanto.<br>
-        <strong>Ti rispondo io</strong> e capiamo se lo shiatsu è adatto nel tuo caso.
+        Se ti riconosci, scrivimi.<br>
+        Anche solo: <strong>“mi sento sempre in tensione”</strong>.<br>
+        <strong>Ti rispondo io personalmente.</strong>
         <div class="ctaPerm">Va bene anche se non sai bene cosa scrivere.</div>
       </div>
 
@@ -240,22 +251,21 @@
     </div>
   </section>
 
+  <!-- SE TI RICONOSCI + BENEFICI -->
   <section class="section">
     <div class="wrap twoCol">
       <div class="soft">
         <h2 class="secTitle" style="margin:0 0 10px">Se ti riconosci</h2>
         <ul class="bullets">
           <li class="li"><span class="tick">✓</span><span>Tensioni a collo/spalle/schiena che ritornano.</span></li>
-          <li class="li"><span class="tick">✓</span><span>Mal di schiena ricorrente (lombare o dorsale) e rigidità.</span></li>
           <li class="li"><span class="tick">✓</span><span>Stress che “resta nel corpo” anche quando ti fermi.</span></li>
           <li class="li"><span class="tick">✓</span><span>Sonno leggero, risvegli, difficoltà a recuperare.</span></li>
           <li class="li"><span class="tick">✓</span><span>Rigidità e stanchezza fisica persistente.</span></li>
+          <li class="li"><span class="tick">✓</span><span>Sensazione di essere sempre un po’ “in allerta”.</span></li>
           <li class="li"><span class="tick">✓</span><span>Disturbi che migliorano per un po’ e poi tornano.</span></li>
-          <!-- NUOVO: selezione -->
-          <li class="li"><span class="tick">✓</span><span>Cerchi un lavoro sul <strong>sistema nervoso</strong>, non un massaggio “ogni tanto”.</span></li>
         </ul>
         <div class="small muted" style="margin-top:10px">
-          Obiettivo: alleggerire tensioni e favorire un rilassamento più stabile nel tempo.
+          Obiettivo: aiutare il corpo a ritrovare un ritmo più calmo e stabile nel tempo.
         </div>
       </div>
 
@@ -278,13 +288,14 @@
     </div>
   </section>
 
+  <!-- COS’È + COME LAVORO -->
   <section class="section">
     <div class="wrap twoCol">
       <div class="soft">
         <h2 class="secTitle" style="margin:0 0 10px">Cos’è lo Shiatsu</h2>
         <div class="muted" style="line-height:1.55">
           Lo shiatsu è un trattamento manuale di origine giapponese che utilizza pressioni su punti e meridiani del corpo
-          per favorire rilassamento e riequilibrio energetico.
+          per favorire rilassamento e riequilibrio.
           Ogni seduta è adattata alla persona e alla fase che sta vivendo.
         </div>
         <div class="hr"></div>
@@ -297,17 +308,10 @@
         <h2 class="secTitle" style="margin:0 0 10px">Come si sviluppa il lavoro</h2>
         <div class="muted" style="line-height:1.55">
           Molte persone iniziano con una singola seduta per una tensione o un disturbo specifico.
-          Se necessario, nel tempo il lavoro può essere integrato con altri strumenti naturali (naturopatia, principi di medicina cinese)
-          per sostenere il benessere in modo più completo.
+          Se serve continuità, di solito si parte con un ciclo breve (2–3 sedute) e poi si rivaluta insieme.
         </div>
 
         <div class="hr"></div>
-
-        <div class="muted" style="line-height:1.55">
-          In molti casi, per permettere al corpo di adattarsi davvero, è utile iniziare con alcune sedute ravvicinate:
-          spesso consiglio <strong>2–3 trattamenti</strong> a distanza di circa <strong>una settimana</strong>.
-          Successivamente gli intervalli possono essere gradualmente allungati in base alle esigenze della persona.
-        </div>
 
         <div class="small muted" style="margin-top:12px">
           Se vuoi approfondire il mio approccio complessivo:
@@ -318,26 +322,19 @@
     </div>
   </section>
 
+  <!-- RISULTATI (grid) -->
   <section class="section">
     <div class="wrap">
       <h2 class="secTitle">Cosa può cambiare (in modo realistico)</h2>
       <div class="grid">
-        <div class="card"><div class="icon">💆‍♂️</div><h3>Tensione più bassa</h3><p>Riduzione di rigidità e contratture nel tempo.</p></div>
-        <div class="card"><div class="icon">😴</div><h3>Sonno più profondo</h3><p>Maggiore capacità di “scendere” e recuperare.</p></div>
-        <div class="card"><div class="icon">🫁</div><h3>Respiro più libero</h3><p>Spesso quando il corpo si ammorbidisce, cambia anche il respiro.</p></div>
+        <div class="card"><div class="icon">💆‍♂️</div><h3>Corpo più morbido</h3><p>Meno rigidità e più sensazione di “spazio”.</p></div>
+        <div class="card"><div class="icon">😴</div><h3>Riposo migliore</h3><p>Più facilità a scendere e recuperare.</p></div>
+        <div class="card"><div class="icon">🫁</div><h3>Respiro più libero</h3><p>Spesso quando il corpo rallenta, cambia anche il respiro.</p></div>
       </div>
     </div>
   </section>
 
-  <section class="section" style="padding-top:0">
-    <div class="wrap">
-      <div class="small muted">
-        Se preferisci leggere una descrizione più completa del trattamento:
-        <a href="https://www.lucacentolani.net/shiatsu" target="_blank" rel="noopener">Pagina Shiatsu sul sito</a>
-      </div>
-    </div>
-  </section>
-
+  <!-- TESTIMONIANZE -->
   <section class="section">
     <div class="wrap twoCol2">
       <div class="quote">
@@ -351,6 +348,7 @@
     </div>
   </section>
 
+  <!-- FAQ -->
   <section class="section" id="faq">
     <div class="wrap">
       <h2 class="secTitle">Domande frequenti</h2>
@@ -366,17 +364,7 @@
         <details class="faqItem">
           <summary>Devo iniziare per forza un percorso?</summary>
           <div class="faqA">
-            No. Puoi iniziare anche con una singola seduta.
-            Se poi emerge che serve continuità, lo valuteremo insieme in modo graduale.
-          </div>
-        </details>
-
-        <details class="faqItem">
-          <summary>Lo shiatsu è “un massaggio”?</summary>
-          <div class="faqA">
-            È un trattamento manuale, ma non è un massaggio estetico.
-            Si lavora con pressioni su punti e meridiani per favorire rilassamento e riequilibrio.
-            L’obiettivo non è “solo” sciogliere muscoli, ma aiutare il corpo a cambiare stato.
+            No. Puoi iniziare anche con una singola seduta. Se poi emerge che serve continuità, lo valuteremo insieme in modo graduale.
           </div>
         </details>
 
@@ -390,22 +378,19 @@
     </div>
   </section>
 
+  <!-- CTA BAND -->
   <section class="section" id="contatto">
     <div class="wrap">
       <div class="ctaBand">
         <h2 class="secTitle" style="margin:0 0 8px">Vuoi capire se fa per te?</h2>
         <div style="color:rgba(255,255,255,.82);line-height:1.5">
-          Scrivimi <strong>2 righe</strong>: cosa senti + da quanto. <strong>Ti rispondo io</strong> e capiamo se lo shiatsu è adatto nel tuo caso.
-        </div>
-
-        <!-- NUOVO: frase selettiva -->
-        <div class="small" style="margin-top:10px;color:rgba(255,255,255,.72)">
-          Se serve continuità, di solito iniziamo con <strong>un piccolo ciclo</strong> (2–3 sedute) e poi rivalutiamo.
+          Se ti riconosci, scrivimi. Anche solo: <strong>“mi sento sempre in tensione”</strong>.<br>
+          <strong>Ti rispondo io personalmente.</strong>
         </div>
 
         <div class="ctaRow" style="margin-top:12px">
           <a class="btn btnPrimary"
-             href="https://wa.me/393478221395?text=Ciao%20Luca%2C%20ti%20scrivo%20per%20uno%20Shiatsu.%0ACosa%20sento%3A%20%5Btensione%2Fdolore%2Fstress%2Fsonno%5D.%0ADa%20quanto%3A%20%5B...%5D.%0ADove%20lo%20sento%20nel%20corpo%3A%20%5Bcollo%2Fspalle%2Fschiena%2Faltro%5D."
+             href="https://wa.me/393478221395?text=Ciao%20Luca%2C%20mi%20riconosco%20in%20questa%20sensazione%3A%20mi%20sento%20spesso%20in%20tensione.%0ACosa%20sento%20nel%20corpo%3A%20%5Bcollo%2Fspalle%2Fschiena%2Faltro%5D.%0ADa%20quanto%3A%20%5B...%5D."
              target="_blank" rel="noopener noreferrer">
             WhatsApp • Scrivimi
           </a>
@@ -419,6 +404,7 @@
     </div>
   </section>
 
+  <!-- FORM IN FONDO -->
   <section class="section" id="form-alt">
     <div class="wrap">
       <div class="soft">
@@ -453,17 +439,17 @@
     </div>
   </div>
 
+  <!-- STICKY CTA -->
   <div class="sticky" aria-label="Contatto rapido">
     <div class="stickyInner">
       <a class="btn btnPrimary"
-         href="https://wa.me/393478221395?text=Ciao%20Luca%2C%20ti%20scrivo%20per%20uno%20Shiatsu.%0ACosa%20sento%3A%20%5Btensione%2Fdolore%2Fstress%2Fsonno%5D.%0ADa%20quanto%3A%20%5B...%5D.%0ADove%20lo%20sento%20nel%20corpo%3A%20%5Bcollo%2Fspalle%2Fschiena%2Faltro%5D."
+         href="https://wa.me/393478221395?text=Ciao%20Luca%2C%20mi%20riconosco%20in%20questa%20sensazione%3A%20mi%20sento%20spesso%20in%20tensione.%0ACosa%20sento%20nel%20corpo%3A%20%5Bcollo%2Fspalle%2Fschiena%2Faltro%5D.%0ADa%20quanto%3A%20%5B...%5D."
          target="_blank" rel="noopener noreferrer">
         WhatsApp • Scrivimi
       </a>
     </div>
     <div class="stickyNote">
-      Scrivimi <strong>2 righe</strong>: cosa senti + da quanto. <strong>Ti rispondo io</strong>.
-      <span style="display:block;margin-top:4px;color:rgba(255,255,255,.70)">Se serve, partiamo con 2–3 sedute e poi rivalutiamo.</span>
+      Se ti riconosci, scrivimi. Anche solo: <strong>“mi sento sempre in tensione”.</strong>
     </div>
   </div>
 
@@ -505,5 +491,6 @@
 
 </body>
 </html>
+
 
 
