--- a/index.html
+++ b/index.html
@@ -223,31 +223,25 @@
 
       <div class="ctaRow">
         <a class="btn btnPrimary"
-           href="https://wa.me/393478221395?text=Ciao%20Luca%2C%20mi%20riconosco%20in%20questa%20sensazione%3A%20mi%20sento%20spesso%20in%20tensione.%0ACosa%20sento%20nel%20corpo%3A%20%5Bcollo%2Fspalle%2Fschiena%2Faltro%5D.%0ADa%20quanto%3A%20%5B...%5D."
+          href="https://wa.me/393478221395?text=Ciao%20Luca%2C%20ho%20visto%20la%20pagina%20Shiatsu.%20Il%20mio%20problema%20principale%20%C3%A8%3A%20..."
            target="_blank" rel="noopener noreferrer">
           WhatsApp • Scrivimi
         </a>
 
-        <div class="heroAlt">
-  Se preferisci, puoi usare il <a href="#form-alt">form del sito</a>.
-</div>
       </div>
 
       <div class="ctaNote">
-        Se ti riconosci, scrivimi.<br>
-        Anche solo: <strong>“mi sento sempre in tensione”</strong>.<br>
-        <div class="ctaPerm">Va bene anche se non sai bene cosa scrivere.</div>
-      </div>
+  Se ti riconosci, scrivimi. Anche solo: <strong>“tensione che torna”</strong>.<br>
+  <span class="ctaPerm">Rispondo personalmente.</span>
+</div>
 
       <div class="micro">
-        Rispondo personalmente • su appuntamento a Solarolo (RA)
+        Su appuntamento a Solarolo (RA)
       </div>
 
       <div class="heroAlt">
-        Se preferisci, puoi usare il <a href="#form-alt">form del sito</a>. <br>
-        Oppure: <a href="https://www.lucacentolani.net" target="_blank" rel="noopener">Vai al sito completo</a> •
-        <a href="https://www.lucacentolani.net/shiatsu" target="_blank" rel="noopener">Pagina Shiatsu</a>
-      </div>
+  Se preferisci, puoi usare il <a href="#form-alt">form del sito</a>.
+</div>
     </div>
   </section>
 
@@ -390,7 +384,7 @@
 
         <div class="ctaRow" style="margin-top:12px">
           <a class="btn btnPrimary"
-             href="https://wa.me/393478221395?text=Ciao%20Luca%2C%20mi%20riconosco%20in%20questa%20sensazione%3A%20mi%20sento%20spesso%20in%20tensione.%0ACosa%20sento%20nel%20corpo%3A%20%5Bcollo%2Fspalle%2Fschiena%2Faltro%5D.%0ADa%20quanto%3A%20%5B...%5D."
+             href="https://wa.me/393478221395?text=Ciao%20Luca%2C%20ho%20visto%20la%20pagina%20Shiatsu.%20Il%20mio%20problema%20principale%20%C3%A8%3A%20..."
              target="_blank" rel="noopener noreferrer">
             WhatsApp • Scrivimi
           </a>
@@ -398,7 +392,7 @@
 
         <div class="small" style="margin-top:10px;color:rgba(255,255,255,.72)">
           Il primo messaggio non è una prenotazione. <strong>Serve solo</strong> per capire se posso esserti utile.<br>
-          Rispondo personalmente • su appuntamento a Solarolo (RA)
+          Su appuntamento a Solarolo (RA)
         </div>
       </div>
     </div>
@@ -443,14 +437,12 @@
   <div class="sticky" aria-label="Contatto rapido">
     <div class="stickyInner">
       <a class="btn btnPrimary"
-         href="https://wa.me/393478221395?text=Ciao%20Luca%2C%20mi%20riconosco%20in%20questa%20sensazione%3A%20mi%20sento%20spesso%20in%20tensione.%0ACosa%20sento%20nel%20corpo%3A%20%5Bcollo%2Fspalle%2Fschiena%2Faltro%5D.%0ADa%20quanto%3A%20%5B...%5D."
+         href="https://wa.me/393478221395?text=Ciao%20Luca%2C%20ho%20visto%20la%20pagina%20Shiatsu.%20Il%20mio%20problema%20principale%20%C3%A8%3A%20..."
          target="_blank" rel="noopener noreferrer">
         WhatsApp • Scrivimi
       </a>
     </div>
-    <div class="stickyNote">
-      Se ti riconosci, scrivimi. Anche solo: <strong>“mi sento sempre in tensione”.</strong>
-    </div>
+
   </div>
 
 </div>
